# college-cube

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build-test.yml
src/: cube.hpp  cube_common.hpp  cube_solve.hpp  main.cpp  task_system.hpp
test/: test.cpp
test/cases/: 1.txt  10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  17.txt  18.txt  20.txt  5.txt  6.txt  7.txt  8.txt  9.txt
